--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,22 @@
-/* Import fonts */
-@import url('https://fonts.googleapis.com/css2?family=Font1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Font2&display=swap');
+/* Light theme */
+:root {
+  --background-color: #ffffff;
+  --text-color: #000000;
+  --scrollbar-track-color: #f1f1f1;
+  --scrollbar-thumb-color: #888;
+  --scrollbar-thumb-hover-color: #555;
+
+  --webfont-family: 'Open Sans', sans-serif;
+}
+
+/* Dark theme */
+[data-theme="dark"] {
+  --background-color: #000000;
+  --text-color: #ffffff;
+  --scrollbar-track-color: #333;
+  --scrollbar-thumb-color: #555;
+  --scrollbar-thumb-hover-color: #888;
+}
 
 html {
   width: 100%;
@@ -10,7 +26,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Font1', sans-serif;
+  font-family: var(--webfont-family);
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -18,6 +34,38 @@ body {
   overflow-x: hidden;
   background-color: var(--background-color);
   color: var(--text-color);
+}
+
+/* Custom webkit scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 12px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: var(--scrollbar-track-color);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb-color);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-thumb-hover-color);
+}
+
+b, strong {
+  font-family: var(--webfont-family);
+  font-weight: bold;
+}
+
+i, em {
+  font-family: var(--webfont-family);
+  font-style: italic;
+}
+
+.light {
+  font-family: var(--webfont-family);
+  font-weight: 300;
 }
 
 header, footer {
@@ -56,37 +104,8 @@ main {
   flex-direction: column;
 }
 
-/* Custom webkit scrollbar */
-::-webkit-scrollbar {
-  width: 12px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--scrollbar-track-color);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--scrollbar-thumb-color);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--scrollbar-thumb-hover-color);
-}
-
-/* Light theme */
-:root {
-  --background-color: #ffffff;
-  --text-color: #000000;
-  --scrollbar-track-color: #f1f1f1;
-  --scrollbar-thumb-color: #888;
-  --scrollbar-thumb-hover-color: #555;
-}
-
-/* Dark theme */
-[data-theme="dark"] {
-  --background-color: #000000;
-  --text-color: #ffffff;
-  --scrollbar-track-color: #333;
-  --scrollbar-thumb-color: #555;
-  --scrollbar-thumb-hover-color: #888;
+.scrollable.demo-scroll {
+  overflow-y: auto;
+  max-height: 100px;
+  margin: 1em 0;
 }
