--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,8 @@ i, em {
 }
 
 header, footer {
-  background-color: #333;
-  color: white;
+  background-color: var(--text-color);
+  color: var(--background-color);
   text-align: center;
   position: sticky;
   width: 100%;
@@ -158,7 +158,7 @@ main {
 }
 
 footer a {
-  color: var(--text-color);
+  color: inherit;
   text-decoration: none;
 }
 
