--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: var(--background-color);
   color: var(--text-color);
 }
@@ -104,7 +103,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: var(--content-gutter);
+  padding: 0 var(--content-gutter);
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-weight: bold;
 }
 
 h2 {
@@ -132,11 +137,22 @@ footer {
   flex-direction: column;
 }
 
-footer nav {
+nav {
   display: flex;
   justify-content: center;
-  gap: var(--content-gutter);
-  padding: var(--content-gutter);
+  gap: var(--content-gutter-half);
+  padding: 0 var(--content-gutter);
+}
+
+nav a {
+  color: var(--text-color);
+  padding: var(--content-gutter) var(--content-gutter-half);
+}
+
+nav a.selected {
+  background: var(--background-color);
+  color: var(--text-color);
+  text-decoration: none;
 }
 
 main {
@@ -144,11 +160,21 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+}
+
+.side-by-side-container {
+  overflow: hidden;
 }
 
 .pagewidth {
   width: 100%;
   max-width: 80rem;
+}
+
+.scrollable {
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 .scrollable.demo-scroll {
@@ -157,6 +183,7 @@ main {
   margin: 1em 0;
 }
 
+header a,
 footer a {
   color: inherit;
   text-decoration: none;
@@ -239,14 +266,8 @@ footer a {
   border-radius: var(--border-radius) 0 0 var(--border-radius);
 }
 
-.account-details-wrapper {
-  position: sticky;
-  top: var(--header-height);
-  padding-top: var(--content-gutter);
-}
-
 .account-details {
-  padding: 0 var(--content-gutter) var(--content-gutter);
+  padding: var(--content-gutter);
   flex-grow: 1;
   border-radius: 0 var(--border-radius) var(--border-radius) var(--border-radius);
 }
